--- a/exercises/01-Hello-World/index.html
+++ b/exercises/01-Hello-World/index.html
@@ -1,1 +1,19 @@
 <!-- your code here -->
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Hello World</title>
+		<style>
+			a {
+				/* cambia este estilo a yellow */
+				color: pink;
+			}
+		</style>
+	</head>
+	<body>
+		<a href="https://google.com" target="_blank">Click me to open google.com</a>
+	</body>
+</html>
