--- a/exercises/03-Inline-Styles/index.html
+++ b/exercises/03-Inline-Styles/index.html
@@ -2,6 +2,11 @@
 <html>
 	<head>
 		<title>03 Inline Styles</title>
+		<style>
+			table {
+				background: green;
+			}
+		</style>
 	</head>
 
 	<body>
